infra/environments/auth0/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crash-game-ingress
spec:
  tls:
  - hosts:
    - auth0-elon-api.wallfair.io
    secretName: crash-game-auth0-cert-secret
  rules:
  - host: auth0-elon-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crash-game-backend
              port:
                number: 80
